--- a/assets/modules/contract/pom.xml
+++ b/assets/modules/contract/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>mtime.basis</groupId>
-        <artifactId>contract-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath></relativePath>
+        <relativePath/>
+        <groupId>lark</groupId>
+        <artifactId>lark-starter-contract</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <groupId>{{.GroupID}}</groupId>
     <artifactId>{{.ArtifactID}}</artifactId>
