--- a/assets/modules/api-contract/pom.xml
+++ b/assets/modules/api-contract/pom.xml
@@ -3,10 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <relativePath/>
+        <groupId>lark</groupId>
+        <artifactId>lark-starter-api-contract</artifactId>
+        <version>1.5.0-SNAPSHOT</version>
+    </parent>
     <groupId>{{.GroupID}}</groupId>
     <artifactId>{{.ArtifactID}}</artifactId>
-    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <modules>
-    </modules>
 </project>
