--- a/assets/modules/api/pom.xml
+++ b/assets/modules/api/pom.xml
@@ -3,10 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>lark</groupId>
-        <artifactId>lark-starter-task</artifactId>
-        <version>1.5.0-SNAPSHOT</version>
         <relativePath/>
+        <groupId>lark</groupId>
+        <artifactId>lark-starter-api</artifactId>
+        <version>1.5.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>{{ .GroupID }}</groupId>
@@ -14,6 +14,11 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
+        <dependency>
+            <groupId>{{ .GroupID }}</groupId>
+            <artifactId>{{ .ArtifactID }}-contract</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>{{ .GroupID }}</groupId>
             <artifactId>{{ .CleanArtifactID }}-service-contract</artifactId>
