--- a/assets/modules/msg-contract/pom.xml
+++ b/assets/modules/msg-contract/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <relativePath/>
         <groupId>lark</groupId>
-        <artifactId>lark-starter-contract</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <artifactId>lark-starter-msg-contract</artifactId>
+        <version>1.5.0-SNAPSHOT</version>
     </parent>
     <groupId>{{.GroupID}}</groupId>
     <artifactId>{{.ArtifactID}}</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 </project>
