--- a/assets/modules/task/application.yml
+++ b/assets/modules/task/application.yml
@@ -11,21 +11,21 @@ lark:
 
 ---
 spring:
-  profiles: default
+  profiles: playground
 
   cloud:
     nacos:
       discovery:
-        server-addr: lark-dep-env.foo.com:8848
+        server-addr: 192.168.99.92:8848
 
       config:
-        server-addr: lark-dep-env.foo.com:8848
+        server-addr: 192.168.99.92:8848
 
   redis:
     redisson:
       config: |
         singleServerConfig:
-          address: redis://lark-dep-env.foo.com:6379
+          address: redis://192.168.99.92:6379
           password: 12345678
           subscriptionConnectionMinimumIdleSize: 10
           subscriptionConnectionPoolSize: 50
@@ -34,7 +34,7 @@ spring:
           database: 0
 
   datasource:
-    url: jdbc:mysql://lark-dep-env.foo.com:3306/demo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.99.92:3306/demo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
     username: lark
     password: 12345678
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -42,15 +42,14 @@ spring:
 xxl:
   job:
     admin:
-      addresses: http://127.0.0.1:8280/xxl-job-admin
+      addresses: http://192.168.99.92:8280/xxl-job-admin
     executor:
       appname: {{.ArtifactID}}
-      ip: 192.168.0.189
+      ip: 192.168.99.92
       port: 9999
-      logpath: /Volumes/andy-ext/log/xxl-job/demo-task
       logretentiondays: 30
 
 rocketmq:
-  name-server: lark-dep-env.foo.com:9876
+  name-server: 192.168.99.92:9876
   producer:
     group: {{.ArtifactID}}
