add: actuator中增加prometheus输出

--- a/assets/modules/msg-handler/application.yml
+++ b/assets/modules/msg-handler/application.yml
@@ -5,6 +5,15 @@ spring:
 server:
   port: {{.Port}}
 
+lark:
+  project: 
+    type: msg-handler
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, prometheus
 ---
 spring:
   config:
