--- a/assets/modules/service/application.yml
+++ b/assets/modules/service/application.yml
@@ -9,6 +9,11 @@ lark:
   project:
     type: service
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, prometheus
 ---
 spring:
   config:
